--- a/src/sass/project/_index.scss
+++ b/src/sass/project/_index.scss
@@ -1,4 +1,7 @@
 //================================
 //  PROJECT
 //================================
+@use "p-page";
 @use "p-front";
+@use "p-common";
+@use "p-typography";
