--- a/src/sass/foundation/_base.scss
+++ b/src/sass/foundation/_base.scss
@@ -20,10 +20,10 @@ textarea {
   font-family: $f__base;
 }
 h1, h2, h3 {
-	font-family: $f__base;
+	// font-family: $f__base;
 }
 h4, h5, h6 {
-  font-family: $f__base;
+  // font-family: $f__base;
 }
 h1 {
   font-size: 44px;
