--- a/src/sass/project/_p-front.scss
+++ b/src/sass/project/_p-front.scss
@@ -1,1 +1,57 @@
 @use "../global" as *;
+
+.front {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100vh;
+  position: relative;
+}
+
+.content {
+  // margin: 10vh auto 10vh;
+  margin: auto;
+}
+
+.front__slider {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .dots {
+    width: 300px;
+    display: flex;
+    justify-content: space-evenly;
+    margin: 15px auto;
+    span {
+      position: relative;
+      width: 5px;
+      height: 5px;
+      border-radius: 50%;
+      background-color: #dddddd;
+      padding: 5px;
+      &.active {
+        background-color: #000000;
+        &::before {
+          content: "";
+          position: absolute;
+          top: -6px; left: -6px;
+          width: 20px;
+          height: 20px;
+          border: 1px solid #000;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+}
+.front__slider-item {
+  display: flex;
+  justify-content: center;
+  width: 80vw;
+  height: 75vh;
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
+}
